@@ -1,3 +1,6 @@
+R1.3.1          Jan-27-2022     Kukhee Kim
+                - add FPGA temperature reading
+
 R1.3.0          Aug-22-2020     Kukhee Kim
                 - add GitHash
 
